lintian-brush (0.131) UNRELEASED; urgency=medium

  [ Jelmer Vernooĳ ]
  * debian-rules-uses-as-needed-linker-flags: don't just reformat linker
    flag lines.

  [ Debian Janitor ]
  * Remove constraints unnecessary since buster:(oldstable)
    + Build-Depends: Drop versioned constraint on gpg and python3-dulwich.
    + lintian-brush: Drop versioned constraint on python3-dulwich in Depends.
    + lintian-brush: Drop versioned constraint on gpg in Recommends.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 06 Sep 2022 19:53:17 +0100

lintian-brush (0.130) unstable; urgency=medium

  * Include aliases for releases in changelog. Closes: #1018697
  * debian-rules-uses-as-needed-linker-flag: Support removing --as-
    needed from lists with multiple linker flags.
  * malformed-override: fix fixer, add tests.
  * Bump minimum debmutate to 0.56, as that fixes a bug discarding
    comments in control fields.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 04 Sep 2022 13:50:47 +0100

lintian-brush (0.129) unstable; urgency=medium

  * Add fixer old-override-info-format: updates lintian overrides to new
    format. Closes: #1014407
  * package-uses-deprecated-source-override-location: cope with existing
    debian/source/lintian-overrides.
  * Update key versions.
  * debbugs: Fix database connectivity logic.
  * out-of-date-standards-version: Update for 4.6.1.
  * deb-scrub-obsolete(1): Document supported values for RELEASE in
    arguments.
  * Tweak wording in message when tree is dirty.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 29 Aug 2022 20:58:14 +0100

lintian-brush (0.128) unstable; urgency=medium

  * Add missing dependency on python3-semver.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 08 Jul 2022 19:45:01 +0100

lintian-brush (0.127) unstable; urgency=medium

  * Fix compatibility with newer python-debian/debmutate.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 08 Jul 2022 15:04:03 +0100

lintian-brush (0.126) unstable; urgency=medium

  * Add --yolo argument.
